# Ending_TASK

./: .env.local.example  .gitignore  README.md  WORKLOG.md  start-all.ps1  status-all.ps1  stop-all.ps1
SOFT-rear/: pom.xml
SOFT-rear/build-support/: spring-boot-starter-parent-3.5.9.pom
SOFT-rear/src/main/java/org/soft/softrear/: SoftRearApplication.java
SOFT-rear/src/main/java/org/soft/softrear/pojo/: User.java
SOFT-rear/src/main/resources/: application-local.properties
backend/: frontend_example.md  pom-local.xml
backend/build-support/: maven-global-settings.xml
backend/src/main/resources/: application.properties
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: image.js  model.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: ImageUpload.vue  LoginForm.vue  ModelChat.vue
frontend/src/router/: index.js
frontend/src/utils/: axios.js
frontend/src/views/: HomeView.vue  LoginView.vue
services/dify/: Drone Decision Pipeline DeepSeek.yml
services/mmdet3d/: README.md  requirements.txt  run.ps1
services/mmdet3d/app/: detector.py  main.py  schemas.py  settings.py
services/mmdet3d/model/: config.py
services/yolo-http/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.ps1  start.sh
web/: vite.config.js
web/src/: App.vue
web/src/api/: auth.js  image.js
web/src/components/: ImageUpload.vue  LoginForm.vue  ModelChat.vue
web/src/components/icons/: test1.vue
web/src/utils/: difyPipelineState.js
web/src/views/: HomeView.vue  LoginView.vue
(+24 files in other folders)
