[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-http-service"
version = "1.0.0"
description = "Standalone YOLO HTTP inference service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "opencv-python>=4.10.0",
    "numpy>=1.23.0",
    "ultralytics>=8.4.0",
]

[project.scripts]
yolo-http-service = "app:main"
